dry run comments v0

--- a/AMLD-2020/Complete_AMLD_2020.ipynb
+++ b/AMLD-2020/Complete_AMLD_2020.ipynb
@@ -8,7 +8,24 @@
     "colab_type": "code",
     "id": "OxsTPZphD2ol"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosave disabled\n"
+     ]
+    }
+   ],
    "source": [
     "# libraries\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,6 +57,7 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "%autosave 0\n",
     "\n",
     "###### constants\n",
     "TARGET = 'fare_amount'\n",
@@ -82,11 +100,9 @@
     " \n",
     "<img src=\"images/wordcloud_.png\" width=\"500\"> \n",
     "\n",
-    "You will learn:\n",
-    "* Exploratory Data Analysis\n",
-    "* Visualization of geospatial data\n",
-    "* Feature Engineering and Linear Regression\n",
-    "* Usage of router and traffic prototype\n",
+    "The main sections we're going to cover are:\n",
+    "\n",
+    "<img src=\"images/toc_0.png\" width=\"500\"> \n",
     "\n",
     "## Dataset\n",
     "\n",
@@ -104,15 +120,16 @@
     "This creates a few challenges, as we don't exactly know the route that the driver took. This means that any fixed taxes or tolls are not explicited coded as variables, so we'll see a few ways to try to identify these hidden features.  \n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "    The main focus of this workshop will be <b>not</b> about minimizing your model error score, but rather to explain to you the main concepts and techniques when working with spatial data :)\n",
+    "    1. The main focus of this workshop will be <b>not</b> about minimizing your model error score, but rather to explain to you the main concepts and techniques when working with spatial data :) <br/><br/>\n",
+    "    2. The original dataset is big (> 5Gb of data) so, for this workshop, we've randomly sampled it and made it available for you as a csv file. Lets take a look at it:\n",
     "</div>\n",
-    "  \n",
-    "The original dataset is big (> 5Gb of data), so we randomly sampled and made it available for you. Lets take a look at it:\n"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -242,7 +259,40 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(DATASET_PATH)\n",
+    "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'])\n",
+    "display(df.head())\n",
+    "display(df.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Latitude/Longitude\n",
+    "\n",
+    "Latitude and longitude are imaginary horizontal and vertical lines respectively that run around the earth.  \n",
+    "\n",
+    "* Latitude run across the globe, and the latitude that runs through the middle of the Earth is given the number zero degrees (0°) and is called the Equator.  \n",
+    "\n",
+    "* Longitude are vertical lines around Earth. They meet at the poles and are wide apart at Equator.  \n",
+    "\n",
+    "Together, latitude and longitude identify a point on a spherical system, in our case on our planet The Earth.  \n",
+    "\n",
+    "<img src=\"images/latitude_longitude.png\" width=\"600\"> \n",
+    "<center>Image source - <a href=\"https://en.wikipedia.org/wiki/Geographic_coordinate_system\">https://en.wikipedia.org/wiki/Geographic_coordinate_system</a></center> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -376,11 +426,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(DATASET_PATH)\n",
-    "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'])\n",
-    "display(df.head())\n",
-    "display(df.dtypes)\n",
-    "display(df.describe())\n"
+    "df.describe()"
    ]
   },
   {
@@ -556,7 +602,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that some points are quite wrong, being not just outside New York, but rather in other countries or even in the middle of the ocean. Lets do a simple approach to remove those points and build a [bounding box](https://wiki.openstreetmap.org/wiki/Bounding_Box), *i.e.*, a square around New York, and remove all points whose pick-up or drop-off happens to be outside of it."
+    "We can see that some points are quite wrong, being not just outside New York, but rather in other countries or even in the middle of the ocean. Lets do a simple approach to remove those points and build a [bounding box](https://wiki.openstreetmap.org/wiki/Bounding_Box) (bbox), *i.e.*, a square around New York.  \n",
+    "  \n",
+    "In order to build a squared bbox, we need two pairs of [latitude, longitude] points, the bottom left and top right corners. In order to get them, we can click on specific places on [Google Maps](https://www.google.com/maps) and get the returned latitude/longitudes points. Finally, everything that's outside the bbox definition, we will filter out from our dataset.\n",
+    "\n",
+    "<img src=\"images/ny_bbox.png\" width=\"600\"> \n",
+    "<center>Image source - <a href=\"https://gis.stackexchange.com/questions/255158/get-minimum-and-maximum-latitude-and-longitude-of-new-york\">https://gis.stackexchange.com/questions/255158/get-minimum-and-maximum-latitude-and-longitude-of-new-york</a></center> \n"
    ]
   },
   {
@@ -606,9 +657,7 @@
     "id": "3bypvW8YD-Ih"
    },
    "source": [
-    "# Split training and testing\n",
-    "\n",
-    "We're going to check the distribution of out dataset. Because of that, lets first split the dataset into `training` and `testing`, as one measure against overfitting our test set."
+    "# Split training and testing"
    ]
   },
   {
@@ -639,7 +688,7 @@
     "def split_training_test(df, target=TARGET, test_size=0.2):\n",
     "    X = df.drop(TARGET, axis=1)\n",
     "    y = df[TARGET]\n",
-    "    return train_test_split(X, y, test_size=test_size, random_state=0) \n",
+    "    return train_test_split(X, y, test_size=test_size, random_state=42) \n",
     "\n",
     "def join_Xy(df, target, target_str=TARGET):\n",
     "    df_ = df.copy()\n",
@@ -1512,20 +1561,6 @@
    "source": [
     "## Why the feature value above is not correct? \n",
     "\n",
-    "Although it works for our model, if you look at pipeline1's output, the euclidean distance values don't make any sense. The linear model manages to compensate the non sense values to the output by adjusting it's weights. However, if we need to explain our model's decision, it's good to have the features into some unit of measure, whether spacial or standardized, for example. Which makes us wonder, so then, `What is Latitude/Longitude?`\n",
-    "\n",
-    "### Latitude/Longitude\n",
-    "\n",
-    "Latitude and longitude are imaginary horizontal and vertical lines respectively that run around the earth.  \n",
-    "\n",
-    "* Latitude run across the globe, and the latitude that runs through the middle of the Earth is given the number zero degrees (0°) and is called the Equator.  \n",
-    "\n",
-    "* Longitude are vertical lines around Earth. They meet at the poles and are wide apart at Equator.  \n",
-    "\n",
-    "Together, latitude and longitude identify a point on a spherical system, in our case on our planet The Earth.  \n",
-    "\n",
-    "<img src=\"images/latitude_longitude.png\" width=\"600\"> \n",
-    "<center>Image source - <a href=\"https://en.wikipedia.org/wiki/Geographic_coordinate_system\">https://en.wikipedia.org/wiki/Geographic_coordinate_system</a></center> \n",
     "\n",
     "### Projections\n",
     "\n",
@@ -1915,6 +1950,9 @@
     "$$d_{1}(p,q) = \\left \\| p-q \\right \\|_{1} = \\sum_{i=1}^{n}\\left | p_{i} - q_{i} \\right |$$  \n",
     "  \n",
     "The name refers to the minimum distance a taxi would have to travel in a place with regular square blocks instead of a direct straight line.  \n",
+    "\n",
+    "<img src=\"images/manhattan_distance.png\" width=\"250\"> \n",
+    "<center>Source: <a href=\"https://en.wikipedia.org/wiki/Great-circle_distance\">Wikipedia</a></center>  \n",
     "\n",
     "### Haversine Distance:\n",
     "\n",
@@ -3966,7 +4004,26 @@
     "\n",
     "As you've learned already, OSRM works over partitioning OSM's data into a routable graph. OSRM works great if you want the **shortest** route, *i.e.*, find the minimum path between two nodes where the edge weight is the street length. However, if you want to consider more realistic scenarios, OSRM provide you with tools to route the **fastest** route between two nodes, *i.e.*, incorporate your own traffic data inside the router so it takes this information into consideration ([Reference](https://github.com/Project-OSRM/osrm-backend/wiki/Traffic)).  \n",
     "  \n",
-    "Because we have to work with OSM in a deeper level, we have to firstly understand how OSM represent its internal data:   \n",
+    "In order to follow with this section, we need to be presented to two new concepts:  \n",
+    "  * GPS Traces\n",
+    "  * Open Street Maps Data Representation\n",
+    "\n",
+    "## GPS Traces  \n",
+    "\n",
+    "This is the data that we'll be working on this section. Everyday, everyone produce a lot of data that contains a geo location attributed to it, such as:\n",
+    "* instagram tag\n",
+    "* location check-in\n",
+    "* and, most important for this workshop, a periodic location update of where you are, either by foot or by car.  \n",
+    "\n",
+    "Regarding cars, this sequence of GPS locations + time stamps are regarded as `traces` and are the main data input for a traffic information. They main idea behind this is that, as traces contains positions and time, their follow up average speeed and acceleration can be calculated. Therefore, by aggregation multiple traces in the city and defining their average speed over an area, we can have an idea of the traffic flow that is running through the city.\n",
+    "\n",
+    "The GPS signal is [acquired through satellites](http://www.physics.org/article-questions.asp?id=55) and, the more open is your surroundings, the easier is to get your position. Unfortunately, that's not the case in big cities, where we can see tall buildings everywhere and is the place that usually coincides with high traffic volumes.   \n",
+    "\n",
+    "<img src=\"images/bad_gps.png\" width=\"500\"> \n",
+    "<center>Bad GPS Signal. Source: <a href=\"https://www.gps.gov/systems/gps/performance/accuracy/\">https://www.gps.gov/systems/gps/performance/accuracy/</a></center>   \n",
+    "\n",
+    "All this makes the acquiring of GPS traces a challenge by itself and the data that we can usually get from our users' smartphones don't perfectly represent the user/car real position but actually a noisy representation of it, as you can see in the picture below. If we want to match traffic volume/average speeds to the street level, we need to make sure our traces are aligned with the city's network. In order to to this, we use a map provider + tools in OSM:\n",
+    "  \n",
     "\n",
     "## OSM Data Representation\n",
     "\n",
@@ -3986,6 +4043,7 @@
     "* **Nodes** have a description of what exactly is the node. Implicitly, **all** OSM nodes also have a `latitude/longitude` associated with it.\n",
     "* Street **Ways** have informations about the street, such as whether it has a `bicycle path`, if it has a `sidewalk` and mainly, what is it's `maximum driving speed`. An important observation on ways is that **it doesn't always have maximum speed**. Ways in OSM were not created having routing in mind so that ways can be defined split in multiple pieces or a same path can be inside different ways. See for example https://www.openstreetmap.org/way/7552152 and https://www.openstreetmap.org/way/48859717. Street ways can also be complex because we might not have the same street speed during the whole \n",
     "* An important feature about **Relations** is their [administrative level](https://wiki.openstreetmap.org/wiki/Key:admin%20level?uselang=en-GB). This level indicates the level of hierarchy that this relation is taking in terms of spatial boundary. Small administrative levels indicate small spaces, such as parks and neighbors while higher administrative levels go to cities/countries/continents.  \n",
+    "\n",
     "  \n",
     "## Traffic Proof of Concept (POC)\n",
     "\n",
@@ -5038,7 +5096,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
