--- a/AMLD-2020/Presentation_AMLD_2020.ipynb
+++ b/AMLD-2020/Presentation_AMLD_2020.ipynb
@@ -40,6 +40,8 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "%autosave 0\n",
+    "\n",
     "\n",
     "###### constants\n",
     "TARGET = 'fare_amount'\n",
@@ -82,11 +84,9 @@
     " \n",
     "<img src=\"images/wordcloud_.png\" width=\"500\"> \n",
     "\n",
-    "You will learn:\n",
-    "* Exploratory Data Analysis\n",
-    "* Visualization of geospatial data\n",
-    "* Feature Engineering and Linear Regression\n",
-    "* Usage of router and traffic prototype\n",
+    "The main sections we're going to cover are:\n",
+    "\n",
+    "<img src=\"images/toc_0.png\" width=\"500\"> \n",
     "\n",
     "## Presentation and full notebook\n",
     "\n",
@@ -107,14 +107,16 @@
     "  \n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "    The main focus of this workshop will be <b>not</b> about minimizing your model error score, but rather to explain to you the main concepts and techniques when working with spatial data :)\n",
+    "    1. The main focus of this workshop will be <b>not</b> about minimizing your model error score, but rather to explain to you the main concepts and techniques when working with spatial data :) <br/><br/>\n",
+    "    2. The original dataset is big (> 5Gb of data) so, for this workshop, we've randomly sampled it and made it available for you as a csv file. Lets take a look at it:\n",
     "</div>\n",
+    "\n",
     " \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -244,7 +246,40 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(DATASET_PATH)\n",
+    "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'])\n",
+    "display(df.head())\n",
+    "display(df.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Latitude/Longitude\n",
+    "\n",
+    "Latitude and longitude are imaginary horizontal and vertical lines respectively that run around the earth.  \n",
+    "\n",
+    "* Latitude run across the globe, and the latitude that runs through the middle of the Earth is given the number zero degrees (0°) and is called the Equator.  \n",
+    "\n",
+    "* Longitude are vertical lines around Earth. They meet at the poles and are wide apart at Equator.  \n",
+    "\n",
+    "Together, latitude and longitude identify a point on a spherical system, in our case on our planet The Earth.  \n",
+    "\n",
+    "<img src=\"images/latitude_longitude.png\" width=\"600\"> \n",
+    "<center>Image source - <a href=\"https://en.wikipedia.org/wiki/Geographic_coordinate_system\">https://en.wikipedia.org/wiki/Geographic_coordinate_system</a></center> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -378,11 +413,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(DATASET_PATH)\n",
-    "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'])\n",
-    "display(df.head())\n",
-    "display(df.dtypes)\n",
-    "display(df.describe())"
+    "df.describe()"
    ]
   },
   {
@@ -548,7 +579,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that some points are quite wrong, being not just outside New York, but rather in other countries or even in the middle of the ocean. Lets do a simple approach to remove those points and build a [bounding box](https://wiki.openstreetmap.org/wiki/Bounding_Box), *i.e.*, a square around New York, and remove all points whose pick-up or drop-off happens to be outside of it."
+    "We can see that some points are quite wrong, being not just outside New York, but rather in other countries or even in the middle of the ocean. Lets do a simple approach to remove those points and build a [bounding box](https://wiki.openstreetmap.org/wiki/Bounding_Box) (bbox), *i.e.*, a square around New York.  \n",
+    "  \n",
+    "In order to build a squared bbox, we need two pairs of [latitude, longitude] points, the bottom left and top right corners. In order to get them, we can click on specific places on [Google Maps](https://www.google.com/maps) and get the returned latitude/longitudes points. Finally, everything that's outside the bbox definition, we will filter out from our dataset.\n",
+    "\n",
+    "<img src=\"images/ny_bbox.png\" width=\"600\"> \n",
+    "<center>Image source - <a href=\"https://gis.stackexchange.com/questions/255158/get-minimum-and-maximum-latitude-and-longitude-of-new-york\">https://gis.stackexchange.com/questions/255158/get-minimum-and-maximum-latitude-and-longitude-of-new-york</a></center> \n"
    ]
   },
   {
@@ -598,9 +634,7 @@
     "id": "3bypvW8YD-Ih"
    },
    "source": [
-    "# Split training and testing\n",
-    "\n",
-    "We're going to check the distribution of out dataset. Because of that, lets first split the dataset into `training` and `testing`, as one measure against overfitting our test set."
+    "# Split training and testing"
    ]
   },
   {
@@ -631,7 +665,7 @@
     "def split_training_test(df, target=TARGET, test_size=0.2):\n",
     "    X = df.drop(TARGET, axis=1)\n",
     "    y = df[TARGET]\n",
-    "    return train_test_split(X, y, test_size=test_size, random_state=0) \n",
+    "    return train_test_split(X, y, test_size=test_size, random_state=42) \n",
     "\n",
     "def join_Xy(df, target, target_str=TARGET):\n",
     "    df_ = df.copy()\n",
@@ -1140,6 +1174,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----------------------------------------------------------------------------\n",
+    "\n",
+    "<img src=\"images/toc_1.png\" width=\"500\"> \n",
+    "\n",
+    "-----------------------------------------------------------------------\n",
+    "\n",
+    "\n",
     "# Feature Engineering - Model Iterations\n",
     "\n",
     "Now that we have a cleaner training set, we can use it to create our predictions! For teaching purposes, we're going to create multiple models, with incremental set of features/complexity. For each iteration, we're going to show a demo with the feature's concept, create a pipeline, train our models and then show and store the errors by their's [Root Mean Squared Error - RMSE](https://en.wikipedia.org/wiki/Root-mean-square_deviation).\n",
@@ -1505,11 +1546,6 @@
     "## Why the feature value above is not correct? \n",
     "\n",
     "Although it works for our model, if you look at pipeline1's output, the euclidean distance values don't make any sense. Why is that?\n",
-    "\n",
-    "### Latitude/Longitude\n",
-    "\n",
-    "<img src=\"images/latitude_longitude.png\" width=\"600\"> \n",
-    "<center>Image source - <a href=\"https://en.wikipedia.org/wiki/Geographic_coordinate_system\">https://en.wikipedia.org/wiki/Geographic_coordinate_system</a></center> \n",
     "\n",
     "### Projections\n",
     "\n",
@@ -3705,6 +3741,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----------------------------------------------------------------------------\n",
+    "\n",
+    "<img src=\"images/toc_2.png\" width=\"500\"> \n",
+    "\n",
+    "-----------------------------------------------------------------------\n",
+    "\n",
     "### How to speed up spatial queries:\n",
     "\n",
     "<img src=\"images/spatial_indexes.png\" width=\"500\"> \n",
@@ -3862,10 +3904,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----------------------------------------------------------------------------\n",
+    "\n",
+    "<img src=\"images/toc_3.png\" width=\"500\"> \n",
+    "\n",
+    "-----------------------------------------------------------------------\n",
+    "\n",
     "# Traffic Prototype\n",
     "\n",
     "<img src=\"images/traffic.png\" width=\"500\"> \n",
     "<center>Traffic information from Google Maps</center> \n",
+    "\n",
+    "\n",
+    "## GPS Traces\n",
+    "\n",
+    "<img src=\"images/bad_gps.png\" width=\"500\"> \n",
+    "<center>Bad GPS Signal. Source: <a href=\"https://www.gps.gov/systems/gps/performance/accuracy/\">https://www.gps.gov/systems/gps/performance/accuracy/</a></center>  \n",
+    "\n",
     "\n",
     "## OSM Data Representation\n",
     "\n",
@@ -4734,6 +4789,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----------------------------------------------------------------------------\n",
+    "\n",
+    "<img src=\"images/toc_4.png\" width=\"500\"> \n",
+    "\n",
+    "-----------------------------------------------------------------------\n",
+    "\n",
     "# Retrieving Extra Map Features\n",
     "\n",
     "Objective: Extract extra information, we're open to new kind of possibilities when doing our analysis/features:\n",
@@ -4916,7 +4977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
