fixed bug with lines_k

--- a/AMLD-2020/Presentation_AMLD_2020.ipynb
+++ b/AMLD-2020/Presentation_AMLD_2020.ipynb
@@ -4476,7 +4476,7 @@
     "from_node = []\n",
     "to_node = []\n",
     "seg_date = []\n",
-    "for ix, row in lines_k.iterrows():\n",
+    "for ix, row in lines_k.dropna().iterrows():\n",
     "    row_df = pd.DataFrame()\n",
     "    lat_lon_pairs = []\n",
     "    i = 1\n",
