--- a/AMLD-2020/Presentation_AMLD_2020.ipynb
+++ b/AMLD-2020/Presentation_AMLD_2020.ipynb
@@ -1579,7 +1579,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_knn = range(1,12)\n",
+    "###########################################################################################################\n",
+    "## Enter values to check different values for neighbors\n",
+    "###########################################################################################################\n",
+    "# replace 1 by the minimum number of neighbors you want to test\n",
+    "START_N = 1\n",
+    "\n",
+    "# replace 2 by the maximum number of neighbors you want to test (if you chose a too high number and the execution\n",
+    "# takes too long: interrupt the kernel with the square symbol and choose a smaller number)\n",
+    "END_N = 2\n",
+    "###########################################################################################################\n",
+    "\n",
+    "n_knn = range(START_N, END_N+1)\n",
     "for n in n_knn:\n",
     "    df_train_ex_knn, _, nn_avg_fare_model = feature_pipeline_4(df_train, test_mode='train', n_neighbors=n)\n",
     "    df_test_ex_knn, _, _ = feature_pipeline_4(df_test, test_mode='test', nn_avg_fare_model=nn_avg_fare_model)\n",
@@ -1589,7 +1600,7 @@
     "    y_test_pred_ex_knn = model_ex_knn.predict(df_test_ex_knn.drop(TARGET, axis=1))\n",
     "    \n",
     "    rmse_ex_knn = np.sqrt(mean_squared_error(df_test_ex_knn[TARGET], y_test_pred_ex_knn))\n",
-    "    print(f'RMSE Error - N = {n}: {rmse_ex_knn}')\n"
+    "    print(f'RMSE Error - N = {n}: {rmse_ex_knn}')"
    ]
   },
   {
@@ -1615,10 +1626,6 @@
     "<div class=\"alert alert-block alert-info\">     \n",
     "The R-Tree helps with filtering out the majority of the dataset that lives outside of the point's bounding box. After the big filtering is done, all the other calculations follow in the same way.  \n",
     "</div>   \n",
-    "  \n",
-    "### Exercise KNNRegressor  \n",
-    "\n",
-    "Using the codes above, define what is the best value of `n_neighbors` that minimizes the test RMSE?\n",
     "      \n",
     "[Here](https://geoffboeing.com/2016/10/r-tree-spatial-index-python/) is an example that filter streets based on a city polygon using R-Trees.\n",
     "  \n",
